<resources>
    <string name="app_name">Practica5</string>
    <string name="action_valoravida">Valora vida</string>
    <string name="action_fechas">Mostrar entre fechas</string>
    <string name="action_setting">Configurar</string>
    <string name="action_about">Acerca de...</string>
    <string name="rbAsc">Asc</string>
    <string name="rbDesc">Desc</string>
    <string name="tv_fechaFormateada">%1$s</string>
    <string name="fecha_guardar">%1$d-%2$d-%3$d</string>
    <string name="et_Resumen">Resumen breve del día</string>
    <string name="tv_ValoraDia">Valora Dia: 5</string>
    <string name="tv_ValoraDiaFormateado">Valora Dia: %1$d</string>
    <string name="Text_Diario">Cuenta a tu diario tu día...</string>
    <string name="tituloAviso">Aviso</string>
    <string name="mensajeAviso">Es necesario rellenar todos los camos</string>
    <string name="okAviso">OK</string>
    <string name="tituloDialogo">Borrar dia</string>
    <string name="mensajeDialogo">Estás seguro de que quieres borrar el día %1$s</string>
    <string name="yes">SI</string>
    <string name="no">No</string>
    <string name="tituloOrdenar">Ordenar por</string>
    <string name="parte1">Nombre: Alexandro Rodríguez Parrón</string>
    <string name="parte2">Version: 1.0.0</string>
    <string name="parte3">En pleno Desarrollo</string>

    <!-- Empezamos con La parte 3-->
    <string name="preference_file">preferencias</string>
    <string name="pref_key_ultimo_dia">pref_ultimo_dia</string>
    <string name="action_ult_dia">Ultimo día</string>
    <string name="title_activity_preferencias">PreferenciasActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="titulo_ajustes">Datos Personales</string>
    <string name="titulo_nombre_ajustes">Cuál es tu nombre</string>
    <string name="texto_nombre_ajustes">Con qué nombre quieres que nos dirijamos a tí</string>
    <string name="titulo_fecha_ajustes">Fecha Cumpleaños</string>
    <string name="titulo_sexo_ajustes">Eres...</string>
    <string name="texto_sexo_ajustes">Eres un/una...</string>
    <string name="titulo_configuracion_ajustes">Configuración programa</string>
    <string name="titulo_avisar_ajustes">Avisar escribir en Diario</string>
    <string name="texto_off_avisar_ajustes">Desea que le avisemos que tiene que escribir en el diario</string>
    <string name="texto_on_avisar_ajustes">Le avisaremos de que tiene que escribir en el diario</string>

</resources>