<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/titulo_ajustes">

        <EditTextPreference
            app:defaultValue="@string/texto_nombre_ajustes"
            app:key="nombre"
            app:title="@string/titulo_nombre_ajustes"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="@string/titulo_fecha_ajustes"
            app:key="fechaCumple"
            app:title="@string/titulo_fecha_ajustes"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/sexo"
            android:entryValues="@array/sexo"
            android:key="titulo_sexo_ajustes"
            android:summary="@string/texto_sexo_ajustes"
            android:title="@string/titulo_sexo_ajustes" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/titulo_configuracion_ajustes">

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:icon="@android:drawable/ic_popup_reminder"
            app:key="attachment"
            app:summaryOff="@string/texto_off_avisar_ajustes"
            app:summaryOn="@string/texto_on_avisar_ajustes"
            app:title="@string/titulo_avisar_ajustes" />

    </PreferenceCategory>

</PreferenceScreen>