<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_ordenar"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:title="Item"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_valoravida"
        android:title="@string/action_valoravida"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_fechas"
        android:title="@string/action_fechas"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_ult_dia"
        android:title="@string/action_ult_dia"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_setting"
        android:title="@string/action_setting"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="withText" />
</menu>